# MaserThesis

./: 1  AllTransformations.cpp  CMakeLists.txt  FindTextureVisitor.cpp  FindTextureVisitor.h  HUD  HUD.cpp  Makefile  MakefileRenderToTextures  README.md  Script_To_Compile.sh  Thesis  ToDo.txt  Tuto8.cpp  Windshield.osg  application  compile.sh  keyboardController.cpp  keyboardController.h  main.cpp  renderToTextures  renderToTextures.cpp  skrypt.sh  windshieldController.cpp  windshieldController.h  windshieldImage.cpp  windshieldImage.h
Blender/: Windshield.blend  Windshield.blend1  Windshield.mtl  Windshield.x3d
MasterThesis/: .cproject
OSGlib/: libOpenThreads.so.3.3.0  libosg.so.3.4.0  libosgAnimation.so.3.4.0  libosgDB.so.3.4.0  libosgFX.so.3.4.0  libosgGA.so.3.4.0  libosgManipulator.so.3.4.0  libosgParticle.so.3.4.0  libosgPresentation.so.3.4.0  libosgQt.so.130  libosgQt.so.3.4.0  libosgShadow.so.3.4.0  libosgSim.so.3.4.0  libosgTerrain.so.3.4.0  libosgText.so.3.4.0  libosgUI.so.3.4.0  libosgUtil.so.3.4.0  libosgViewer.so.3.4.0  libosgVolume.so.3.4.0  libosgWidget.so.3.4.0
OpenSceneGraph-Data-3.0.0/: Windshield.3ds  Windshield.osg
Training/: HUD.cpp
Training/Blender/: BLENDSWAP_LICENSE.txt  Windshield.3ds  Windshield.blend  Windshield.blend1  Windshield.mtl  Windshield.osgt  mikepan_bmw3v3.mtl
private/: .CMakeLists.txt.swp  CMakeLists.txt  FindTextureVisitor.cpp  keyboardController.cpp  windshieldController.cpp  windshieldImage.cpp
public/inc/: FindTextureVisitor.hpp  windshieldController.hpp
scripts/: Script_To_Compile.sh
